--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url("component/navbar.css");
 @import url("component/hero-image.css");
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap');
 
@@ -9,4 +10,14 @@ body{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+body:has(#hero.coder){
+    --colorOne: #11009E;
+    --colorTwo: #4942E4;
+    --colorThree: #8696FE;
+    --colorFour: #C4B0FF;
+}
+body:has(#hero.designer){
+    --colorOne: #FF731D;
+    --colorFour: #FFD8A9;
 }
