--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,15 @@
 @import url("component/navbar.css");
 @import url("component/hero-image.css");
+@import url("component/about.css");
 @import url("component/footer.css");
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;500&display=swap');
 
 html{
     scroll-behavior: smooth;
 }
 body{
     font-family: 'Kanit', sans-serif;
+    font-weight: 500;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -19,8 +21,18 @@ body:has(#hero.coder){
     --colorTwo: #4942E4;
     --colorThree: #8696FE;
     --colorFour: #C4B0FF;
+    --headerColor: #1800f1;
+    --aboutInformationColor: #00121f;
 }
 body:has(#hero.designer){
     --colorOne: #FF731D;
     --colorFour: #FFD8A9;
+    --headerColor: #FF731D;
+    --aboutInformationColor: #FFFAF4;
+}
+h1{
+    display: inline-block;
+    color: var(--headerColor);
+    font-size: 3em;
+    border-bottom: 5px solid var(--colorFour);
 }
