--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 @import url("component/hero-image.css");
 @import url("component/about.css");
 @import url("component/experience.css");
+@import url("component/skills.css");
 @import url("component/footer.css");
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;500&display=swap');
 
