--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 @import url("component/about.css");
 @import url("component/experience.css");
 @import url("component/skills.css");
+@import url("component/work.css");
 @import url("component/footer.css");
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;500&display=swap');
 
