--- a/assets/css/component/experience.css
+++ b/assets/css/component/experience.css
@@ -30,3 +30,9 @@
     margin: 0;
     color: var(--colorTwo);
 }
+@media screen and (max-width: 768px) {
+    #experience-education{
+        padding-top: 100px;
+        flex-direction: column;
+    }
+}
