--- a/assets/css/component/skills.css
+++ b/assets/css/component/skills.css
@@ -10,16 +10,17 @@
     width: 40%;
     padding: 0.5rem 0;
     margin: 0.3rem 0;
+    position: relative;
 }
 #skill .skill-text{
     display: flex;
     justify-content: flex-start;
     font-weight: 600;
     font-size: 1.3rem;
-    position: relative;
 }
 #skill .skill-text span:last-child{
     position: absolute;
+    bottom: -10px;
 }
 #skill .skill-text .w-90{
     margin-left: calc(90% - 1.3rem);
@@ -82,4 +83,12 @@
 }
 .progress-bar.w-30{
     width: 30%;
+}
+@media screen and (max-width: 768px) {
+    #skill{
+        padding: 100px 10px 0;
+    }
+    #skill .skill{
+        width: 100%;
+    }
 }
