--- a/assets/css/component/about.css
+++ b/assets/css/component/about.css
@@ -67,6 +67,7 @@ color: var(--colorFour);
     border-radius: 5px;
     margin-top: 20px;
     transition: all 0.5s ease-in-out;
+    text-decoration: none;
 }
 #about .content .download-cv:hover{
     letter-spacing: 5px;
