--- a/assets/css/component/about.css
+++ b/assets/css/component/about.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 64px;
+    padding: 64px 0;
 }
 #about .photo{
     width: 300px;
