--- a/assets/css/component/experience.css
+++ b/assets/css/component/experience.css
@@ -3,7 +3,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    padding-top: 64px;
+    padding: 64px 0;
+    background-color: var(--eduexpBgColor);
 }
 #experience-education > *{
     height: 80%;
